--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="repo_event_type_fork_event">Fork Event</string>
     <string name="repo_event_type_issues_event">Issues Event</string>
     <string name="repo_event_type_unknown">Unknown</string>
+
+    <string name="users_repos">Users Repos</string>
 </resources>
