--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="users_repos">Users Repos</string>
 
     <string name="back_button_description">Back button</string>
+    <string name="repo_title">Repository details</string>
     <string name="repo_url">Repository url:</string>
     <string name="owner">Owner</string>
     <string name="last_event">Last event</string>
